--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-pager-view": "6.2.0",
+    "react-native-paper": "^5.11.4",
     "react-native-reanimated": "^3.6.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
